--- a/packages/nativeApp/package.json
+++ b/packages/nativeApp/package.json
@@ -1,33 +1,45 @@
 {
   "name": "nativeapp",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@monorepo/common": "1.0.0",
-    "react": "17.0.1",
-    "react-native": "0.64.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1"
+    "@toilcrew/common": "1.0.0",
+    "react": "17.0.2",
+    "react-native": "0.66.3",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react-native": "^0.66.6",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^27.4.0",
+    "eslint": "^8.3.0",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.5.2"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "workspaces": {
     "nohoist": [
