--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toilcrew",
+  "name": "next",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Shivam Mishra <mishivam1999@gmail.com>",
