--- a/packages/nativeApp/package.json
+++ b/packages/nativeApp/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@toilcrew/common": "1.0.0",
+    "@next/common": "1.0.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-svg-transformer": "^0.14.3"
