--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,14 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "@next/common": "1.0.0",
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "@toilcrew/common": "1.0.0"
+    "react-intl": "^5.24.1",
+    "react-redux": "^7.2.6",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "reduxjs-toolkit-persist": "^7.0.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
+    "@types/redux-logger": "^3.0.9",
     "typescript": "^4.5.2"
   }
 }
